添加JavaUtil库模块，AndroidUtil模块文件补交

--- a/Java/JavaUtil/build.gradle
+++ b/Java/JavaUtil/build.gradle
@@ -4,8 +4,8 @@ plugins {
 
 group 'com.mar.lib.util'
 version '0.0.1'
-if(isServer)
-    sourceCompatibility = '11'
+//if(isServer)
+//    sourceCompatibility = '11'
 
 
 dependencies {
