--- a/Android/Demo/demo/src/main/AndroidManifest.xml
+++ b/Android/Demo/demo/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PairView"
         tools:targetApi="31">
-        <!--
+        <!---->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -24,9 +24,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        -->
+
         <activity
             android:name=".WidgetExample"
+            android:label="WidgetExample"
+            android:theme="@style/AppTheme">
+        </activity>
+        <activity
+            android:name=".LabelLayoutExample"
+            android:label="WidgetExample"
+            android:theme="@style/AppTheme">
+        </activity>
+        <!--
+        <activity
+            android:name=".LabelLayoutExample"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
@@ -35,7 +46,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity>-->
     </application>
 
 </manifest>
