--- a/Android/libs.versions.toml
+++ b/Android/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2023.08.00"
 appcompat = "1.6.1"
 material = "1.10.0"
 annotation  = "1.1.0"
+recyclerview  = "1.1.0"
 
 compileSdk = "34"
 minSdk = "26"
@@ -37,6 +38,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-annotation = {group="androidx.annotation",name="annotation",version.ref="annotation"}
+androidx-recyclerview = {group="androidx.recyclerview",name="recyclerview",version.ref="recyclerview"}
 
 
 [plugins]
